# django-political-map

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
djangopoliticalmap/: settings.py  urls.py  wsgi.py
example/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
example/migrations/: 0001_initial.py  0002_mylocationmultiplace.py  0003_auto_20170309_0935.py  0004_mylocationcomplex.py  0005_mylocationinlinenotplace.py
example/templates/example/: mylocation_form.html
politicalplaces/: __init__.py  admin.py  exceptions.py  fields.py  forms.py  models.py  tests.py  utils.py  widgets.py  widgets.py.orig
politicalplaces/backends/: __init__.py  googlemaps.py
politicalplaces/management/commands/: refresh_data.py
politicalplaces/migrations/: 0002_auto_20170114_1147.py  0004_politicalplace_continent.py  0005_auto_20170119_1737.py  0007_auto_20170315_1728.py  0008_auto_20170317_1636.py  0009_politicalplace_postal_code.py  0011_mapitem_error_log.py  0012_auto_20170720_1350.py
politicalplaces/static/politicalplaces/css/: politicalplaces.css
politicalplaces/templates/place_field/: place_widget.html  place_widget_TEST_POLITICAL_PLACE.html
src/politicalplaces/: apps.py  exceptions.py  fields.py  tests.py  widgets.py
src/politicalplaces/backends/: __init__.py  googlemaps.py
src/politicalplaces/migrations/: 0001_initial.py  0003_auto_20170116_0958.py  0006_mapitem_parent.py  0010_politicalplace_self_item.py
static/politicalplaces/js/: politicalplace.js
(+5 files in other folders)
