[flake8]
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .venv,
    .vscode,
    */migrations/*,
ignore = E501,T499,W503
max-line-length = 80
mypy_config = setup.cfg
select = B,C,E,F,I,W,T4,B9

[metadata]
# replace with your username:
name = django-political-map
version = 1.2.2
author = 20tab srl
author_email = info@20tab.com
description = Django application to store geolocalized places and organize them according to political hierarchy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/20tab/django-political-map
project_urls =
    Bug Tracker = https://github.com/20tab/django-political-map/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[mypy]
ignore_missing_imports = true

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=2.7
install_requires =
    googlemaps == 3.0.2

[options.packages.find]
where = src
exclude = tests
